--- a/src/app/movies/components/movie-detail/movie-detail.component.html
+++ b/src/app/movies/components/movie-detail/movie-detail.component.html
@@ -1,8 +1,36 @@
-<a [routerLink]="['/movies']" class="btn btn-outline-secondary mb-3">Back</a>
-<br>
-<ng-container *ngIf="movie$ | async as movie; else newMovie">
-  <ngi-movie-item [movie]="movie" [editable]="false"></ngi-movie-item>
-</ng-container>
-<ng-template #newMovie>
-  New movie
-</ng-template>
+<div class="card">
+  <div class="card-header">
+    {{movieId ? 'Edit' : 'Create'}} movie form
+  </div>
+  <div class="card-body">
+    <div class="row">
+      <form class="col-9" [formGroup]="movieForm" (ngSubmit)="onSubmit()">
+        <div class="form-group mb-2">
+          <label for="movieTitle">Title</label>
+          <input name="title" class="form-control" id="movieTitle" placeholder="Enter title" formControlName="title">
+        </div>
+        <div class="form-group mb-2">
+          <label for="movieGenre">Genre</label>
+          <input name="genre" class="form-control" id="movieGenre" placeholder="Enter genre" formControlName="genre">
+        </div>
+        <div class="form-group mb-2">
+          <label for="movieYear">Year</label>
+          <input name="year" class="form-control" id="movieYear" placeholder="Enter year" formControlName="year">
+        </div>
+        <div class="form-group mb-2">
+          <label for="moviePlot">Plot</label>
+          <input name="plot" class="form-control" id="moviePlot" placeholder="Enter plot" formControlName="plot">
+        </div>
+        <div class="form-group mb-4">
+          <label for="moviePoster">Poster</label>
+          <input name="poster" class="form-control" id="moviePoster" placeholder="Enter poster" formControlName="poster">
+        </div>
+        <button type="submit" class="btn btn-primary me-2">{{movieId ? 'Save' : 'Create'}}</button>
+        <a [routerLink]="['/movies']" class="btn btn-outline-secondary">Cancel</a>
+      </form>
+      <div class="col-3">
+        <img ngiMovieImageFallback="assets/noImage2.png" [src]="movieForm.controls.poster.value" class='w-100'>
+      </div>
+    </div>
+  </div>
+</div>
