--- a/src/app/movies/components/movie-detail/movie-detail.component.html
+++ b/src/app/movies/components/movie-detail/movie-detail.component.html
@@ -32,6 +32,7 @@
         </div>
         <button type="submit" class="btn btn-primary me-2" [disabled]="!movieForm.valid">{{movieId ? 'Save' : 'Create'}}</button>
         <a [routerLink]="['/movies']" class="btn btn-outline-secondary">Cancel</a>
+        <div class="invalid-feedback" *ngIf="movieForm.errors?.wrongSciFiYear && movieForm.dirty">Sci-Fi movies were introduced after 1902</div>
       </form>
       <div class="col-3">
         <img ngiMovieImageFallback="assets/noImage2.png" [src]="movieForm.controls.poster.value" class='w-100'>
