--- a/src/app/movies/components/movie-detail/movie-detail.component.html
+++ b/src/app/movies/components/movie-detail/movie-detail.component.html
@@ -12,18 +12,8 @@
         </div>
         <div class="form-group mb-2">
           <label for="movieGenre">Genre</label>
-          <div formArrayName="genre" class="mb-2" *ngFor="let genreCtrl of genreCtrls.controls; index as i">
-            <select class="form-select w-50 d-inline me-2" [formControlName]="i">
-              <option disabled value="">Choose a new genre</option>
-              <option *ngFor="let genre of genres" [ngValue]="genre">
-                {{genre}}
-              </option>
-            </select>
-            <i class="far fa-times-circle" role="button" (click)="removeGenre(i)"></i>
-          </div>
-          <br>
-          <a class="btn btn-dark btn-sm" (click)="addGenre()">Add genre</a>
-          <div class="invalid-feedback" *ngIf="genreCtrls.errors?.wrongGenre && genreCtrls.dirty">Genre required</div>
+          <ngi-genre-control formControlName="genre"></ngi-genre-control>
+          <div class="invalid-feedback" *ngIf="movieForm.controls.genre.invalid && movieForm.controls.genre.dirty">Genre required</div>
         </div>
         <div class="form-group mb-2">
           <label for="movieYear">Year</label>
