--- a/src/app/movies/components/movie-item/movie-item.component.html
+++ b/src/app/movies/components/movie-item/movie-item.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-4">
+<div class="card mb-4" *ngIf="movie">
   <div class="card-body">
     <h5 class="card-title fw-bold">
       {{ movie.title }}
