--- a/src/app/movies/components/movie-item/movie-item.component.html
+++ b/src/app/movies/components/movie-item/movie-item.component.html
@@ -28,7 +28,7 @@
         <div
           [style.color]="movieComment.trim().length === 0 ? 'darkred' : 'darkgreen'"
         >
-        {{ wordCount(comment.value) }} words
+        {{comment.value | wordCount }}
         </div>
       </ng-template>
       <ng-template #readonlyComment>
