--- a/src/app/movies/components/movie-item/movie-item.component.html
+++ b/src/app/movies/components/movie-item/movie-item.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-4" *ngIf="movie">
   <div class="card-body">
     <h5 class="card-title fw-bold">
-      {{ movie.title }}
+      <span data-testId="title">{{ movie.title }}</span>
       <h6 class="movie-year fw-normal">({{ movie.year }})</h6>
     </h5>
     <h6 class="card-subtitle mb-2 text-muted">{{ movie.genre }}</h6>
@@ -20,6 +20,7 @@
       ></ng-container>
       <ng-template #editableContent>
         <textarea
+          data-testId="comment"
           [(ngModel)]="movieComment"
           class="mb-1 w-100"
           placeholder="Comment"
@@ -41,6 +42,7 @@
       </div>
       <hr />
       <button
+        data-testId="save-comment"
         (click)="saveComment()"
         [disabled]="movieComment.trim().length === 0"
         class="btn btn-outline-success me-2"
@@ -49,6 +51,7 @@
         {{ commentSaved ? "Edit" : "Save" }} comment
       </button>
       <button
+        data-testId="clear-comment"
         (click)="clearComment()"
         [disabled]="movieComment === ''"
         class="btn btn-outline-warning me-2"
